Responsive Header,Home,About sections modified

--- a/css/main.css
+++ b/css/main.css
@@ -1,124 +1,381 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Ubuntu:wght@500&display=swap");
+
+/* ----------------------------------------------------------------------------
+                                   Common
+---------------------------------------------------------------------------- */
 * {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  /* font-family: "Poppins", sans-serif;
+  font-family: "Ubuntu", sans-serif; */
+}
+header{
+  z-index: 2000;
+}
+body {
+  background-color: #040404;
+  color: #fff;
+  position: relative;
+  background: transparent;
 }
 
-/*-----------header---------*/
-header {
-    width: 100%;
-    height: 10vh;
-    background-color: #21201E;
-    position: fixed;
+body::before {
+  content: "";
+  position: fixed;
+  background: url("../assets/images/black\ background.png") top right no-repeat;
+  background-size: cover;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  z-index: -1;
+}
 
+section .container {
+  background: rgba(157, 151, 226, 0.444);
+  margin-left: 20rem;
+  z-index: 200;
+}
+
+section {
+  background-color: transparent;
+  position: relative;
+  justify-self: center;
+  top: 220px;
+  width: 80vw;
+}
+.section-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-left: 100px;
+}
+.section-title h2::after {
+  content: "";
+  width: 520px;
+  height: 4px;
+  display: inline-block;
+  background: #c916e4;
+  margin: 4px 10px;
+}
+
+/* @media all (max-width) {
+  body::before {
+    background-attachment: fixed;
+  }
+} */
+
+@media (max-width: 750px) {
+  #topbar>ul {
+    display: block;
+    position: absolute;
+  }
+
+  
+}
+a {
+  color: rgb(84, 83, 83);
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgba(59, 216, 240, 0.851);
+  text-decoration: none;
+}
+
+/* ----------------------------------------------------------------------------
+                                   Header
+---------------------------------------------------------------------------- */
+
+#navbar {
+  top: 100px;
+  left: 800px;
+  position: fixed;
+  z-index: 2000;
+}
+.navbar li {
+  list-style: none;
+  display: inline-block;
+  padding: 20px;
+}
+
+.navbar > ul > li > a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: x-large;
+}
+
+.navbar:hover{
+  color: #ca1f1f;
+}
+
+#topbar {
+  /* padding: 0 1em;
+  max-width: 60rem;
+  margin: auto; */
+  position: fixed;
+  z-index: 2000;
+  background-color: blueviolet;
+}
+
+@media (max-width: 1590px) {
+  #header h1 {
+    font-size: 36px;
+  }
+
+  #header h2 {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .social-links {
+    margin-top: 15px;
+  }
+
+  #header .container-flud {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    border: 1px solid red;
+  }
+
+  #navbar{
+    display: none;
+  }
+
+  #burger_button{
+
+  }
 }
 
-.site-logo {
-    width: 200px;
-    height: 100%;
-    margin-left: 30px;
-    border: 1px solid red;
+/* ----------------------------------------------------------------------------
+                              Home section 
+
+---------------------------------------------------------------------------- */
+#home-section {
+  width: 100vw;
+  height: 80vh;
+  /* position: fixed; */
 }
 
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+.social-links {
+  display: flex;
+  position: relative;
+  left: 100px;
+  top: 400px;
+}
+.social-links > a {
+  padding: 10px;
+  background-color: white;
+  border: 2px solid #ca1f1f;
+  border-radius: 50%;
+  margin: 20px;
+  size: 30px;
 }
 
-.nav-list {
-    display: flex;
-    list-style: none;
-    margin-left: 200px;
+.social-links > a:hover {
+  background-color: aqua;
+}
+.header-title {
+  position: relative;
+  top: 440px;
+  left: 80px;
+  font-weight: bolder;
+  font-size: xx-large;
+  width: max-content;
+  font-family: "Creepster", cursive;
 }
 
-.nav-item {
-    width: 100px;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-bottom:2px solid transparent;
+.name {
+  position: relative;
+  top: 430px;
+  left: 140px;
+  color: whitesmoke;
+  font-weight: bolder;
+  font-style: italic;
+  font-family: "Creepster", cursive;
 }
-.nav-item:hover{
-    border-color: #FEA609;
-}
-
-.nav-item > a {
-    text-decoration: none;
-    color: white;
-}
-.nav-item>a:hover{
-    color: #FEA609;
+.intro {
+  position: relative;
+  top: -200px;
+  color: #277ef7ee;
+  left: 30px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.my-resume-btn {
-    margin-left:10vw;
-    width: 150px;
-    height: 60%;
-    border-radius: 12px;
-    border: 2px solid #FEA609;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.my-resume-btn:hover{
-    background-color: #FEA609;
-    border-color: transparent;
-}
-.my-resume-btn>a{
-    text-decoration: none;
-    font-weight: bold;
-    color: white;
+#headerPic {
+  position: relative;
+  top: -282px;
+  left: 600px;
+  opacity: 0.63;
+  width: 500px;
+  z-index: -1;
 }
 
-/*-----X----------header-------X--------*/
-
-/* Media query for tablet screens */
-@media only screen and (max-width: 1024px) {
-    .site-logo {
-        width: 50%; /* Decrease logo size */
-    }
-
-    .nav-list {
-        display: none; /* Hide nav links */
-    }
-
-    .my-resume-btn {
-        display: none; /* Hide resume button */
-    }
-
-    /* Add a hamburger menu icon */
-    .menu-icon {
-        display: block;
-        cursor: pointer;
-        float: right;
-        padding: 28px 20px;
-    }
+#header {
+  position: fixed;
+  top: 450px;
+  left: 200px;
 }
 
-/* Media query for mobile screens */
-@media only screen and (max-width: 768px) {
-    .menu-icon {
-        padding: 18px 15px;
-    }
 
-    #navbar {
-        display: block; /* Show nav links */
-        float: none;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-    }
 
-    #navbar>ul {
-        width: 100%;
-        text-align: center;
-        margin-bottom: 5px;
-    }
+/* ----------------------------------------------------------------------------
+                                 
+---------------------------------------------------------------------------- */
+
+/* ----------------------------------------------------------------------------
+                about section                  
+---------------------------------------------------------------------------- */
+#about-section{
+  
+}
+#title-about {
+  top: 200px;
+  /* left: 300px; */
+  /* background-color: aqua; */
+  width: fit-content;
+}
+
+
+
+.about-img{
+  display: flex;
+  justify-content: flex-start;
+  position: relative;
+  left: -240px;
+  opacity: .9;
+}
+
+.myAbout{
+  background-color: rgb(20, 13, 91);
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  top: 0px;
+  left: 270px;
+  width: 1000px;
+  height: auto;
+  z-index: 230;
+  font-size: xx-large;
+  color: antiquewhite;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.myAbout>p{
+
+}
+.my-details{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  
+}
+
+.my-details li{
+  /* list-style:; */
+  list-style-type: circle;
+
+}
+
+.my-details li i{
+  font-size: 16px;
+  margin-right: 5px;
+  color: #eff1f0;
+  line-height: 0;
+}
+
+.about .tech-img{
+  display: flex;
+  margin: 0 20px 0 20px;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 20px;
+  background-color: aliceblue;
+  border-color: aqua;
+  border-radius: 10%;
+  height: fit-content;
+  width: fit-content;
+}
+.tech-main-div>div>h1{
+  color: rgb(173, 9, 171);
+  font-weight: bolder;
+  font-size: 5rem;
+}
+.tech-main-div{
+  position: relative;
+  background-color: rgb(8, 12, 83);
+  z-index: 230;
+  color: aliceblue;
+}
+.tech-img>img{
+  width: 10vw;
+  height: 10vw;
+}
+
+.tech-div{
+  display: flex;
+  justify-content: center;
+}
+
+/*--------------------------------------------------------------
+# Interests
+--------------------------------------------------------------*/
+.interests .icon-box {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  background: rgba(255, 255, 255, 0.08);
+  transition: ease-in-out 0.3s;
+}
+
+.interests .icon-box i {
+  font-size: 32px;
+  padding-right: 10px;
+  line-height: 1;
+}
+
+.interests .icon-box h3 {
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-size: 16px;
+  color: #fff;
+}
+
+.interests .icon-box:hover {
+  background: rgba(255, 255, 255, 0.12);
+}
+
+
+/* ----------------------------------------------------------------------------
+                              Resume section 
+
+---------------------------------------------------------------------------- */
+
+
+
+
+/* ================================================================================================= */
+/* single page option */
+
+
+#about-section {
+  display: none;
+}
+
+#resume-section {
+  display: none;
+}
+
+#gallery-section {
+  display: none;
+}
+
+#mywork-section {
+  display: none;
+}
+
+#contatct-section {
+  display: none;
 }
