Edit About Section,Home Section,Contact Me Section

--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,19 @@ a:hover {
 
 
 
+/* ----------------------------------------------------------------------------
+                              contact me section 
+
+---------------------------------------------------------------------------- */
+.contact-me-div{
+  display: flex;
+  flex-direction: column;
+}
+
+.infomation-box{
+  
+}
+
 /* ================================================================================================= */
 /* single page option */
 
