--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
   position: relative;
   background: transparent;
   width: 100vw;
+  height: auto;
   overflow-x: hidden;
 }
 
@@ -42,7 +43,7 @@ body::before {
   left: 0;
   right: 0;
   top: 0;
-  height: 100vh;
+  height: 150vh;
   z-index: -1;
 }
 
@@ -267,6 +268,8 @@ header.sticky nav ul li a {
 
 }
 
+
+
 #homeContainer{
   background-color: transparent;
 }
@@ -300,16 +303,23 @@ header.sticky nav ul li a {
 
 .name {
   position: relative;
-  top: 430px;
+  top: 420px;
   left: 140px;
   color: whitesmoke;
   font-weight: bolder;
   font-style: italic;
   font-family: "Creepster", cursive;
 }
+
+.name img{
+  background-color: #0ec56a;
+  border-style: outset;
+  border-radius: 50%;
+}
+
 .intro {
   position: relative;
-  top: -200px;
+  top: -100px;
   color: #277ef7ee;
   left: 30px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -317,7 +327,7 @@ header.sticky nav ul li a {
 
 .hireMe{
   position: relative;
-  top: -180px;
+  top: 0px;
   color: #277ef7ee;
   left: 30px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -326,6 +336,21 @@ header.sticky nav ul li a {
   padding: 40px;
   margin-left: 20px;
   border-radius: 2rem;
+}
+.animate__animated{
+  animation-duration: 10s;
+}
+
+#home-section p {
+  color: #cd10c7;
+  margin: 15px 0 0 0;
+  font-size: 26px;
+  font-family: "Poppins", sans-serif;
+}
+
+#home-section p span {
+  color: #0563bb;
+  letter-spacing: 1px;
 }
 
 #headerPic {
@@ -368,6 +393,7 @@ header.sticky nav ul li a {
   left: -240px;
   opacity: .9;
   padding-right: 0px;
+  
 }
 
 .myAbout{
@@ -451,6 +477,8 @@ header.sticky nav ul li a {
   background-color: rgb(8, 12, 83);
   z-index: 230;
   color: aliceblue;
+  left: 100px;
+  margin: 20px auto 20px auto;
 }
 .tech-img>img{
   width: 10vw;
@@ -458,7 +486,9 @@ header.sticky nav ul li a {
 }
 
 .tech-div{
-  display: flex;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: auto auto auto auto;
   justify-content: center;
 }
 
@@ -502,11 +532,19 @@ header.sticky nav ul li a {
                               Resume section 
 
 ---------------------------------------------------------------------------- */
-.resume-box{
-  
+.resume-big{
+  display: grid;
+  grid-template-columns: 300px 300px;
+  justify-content: space-evenly;
 }
 .resume-box{
   background-color: #0ec56a;
+  margin: 10px;
+  padding: 15px;
+  /* width: max-content; */
+  border: 4px solid black;
+  border-radius: 3rem;
+
 }
 
 /* ----------------------------------------------------------------------------
@@ -686,27 +724,12 @@ footer{
   height: 10vh;
 }
 
-
-
-
-
-
-
-
-
 /*  this is  media quary*/
 
 
 
 
 @media (max-width: 1078px) {
-  .mobile-nav-toggle {
-    display: block;
-  }
-
-  .navbar ul {
-    display: none;
-  }
   .interests>div {
     display:flex;
     flex-direction: row;
@@ -740,11 +763,83 @@ footer{
   }
 
   .myAbout{
-    width: auto;
+    margin: 8px;
+    left: 350px;
+  }
+
+  #home-section {
+    text-align: center;
+  }
+
+  #home-section h1 {
+    font-size: 32px;
+    line-height: 36px;
+  }
+
+  #home-section p {
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+  #header {
+    border-right: 1px solid #e6e9ec;
+    /* left: -300px; */
+  }
+
+  .navbar ul li{
+    color: rgb(218, 39, 39);
+  }
+
+  .nav-link{
+    margin-left: 5px;
   }
 }
 
 
+
+@media (max-width: 768px) {
+  [data-aos-delay] {
+    transition-delay: 0 !important;
+  }
+
+  .mobile-nav-toggle {
+    display: block;
+  }
+
+  .navbar ul li {
+    background-color: #35e888;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+  }
+
+  #navbar{
+    display: none;
+  }
+
+}
+
+@media (max-width:390px){
+  .name{
+    position: relative;
+    top: 420px;
+    left: -354px;
+    color: whites
+  }
+
+
+  .myAbout{
+    width: 300px;
+  }
+
+  .interests{
+    margin-right: 20px;
+  }
+  
+}
 
 
 @media(max-width:307px) {
