--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ a:hover {
   font-weight: 400;
   color: rgba(255, 255, 255, 0.7);
   white-space: nowrap;
-  transition: 0.3s;
+  transition: 0.5s;
   text-decoration: none;
 }
 
@@ -183,16 +183,32 @@ a:hover {
   color: #fff;
 }
 
+.hamburger{
+  display: none;
+  cursor: pointer;
+  
+}
+
+.bar{
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-animation: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  color: white;
+}
+
 /**
 * Mobile Navigation 
 */
-.mobile-nav-toggle {
+/* .mobile-nav-toggle {
   color: #fff;
   font-size: 28px;
   cursor: pointer;
   display: none;
   line-height: 0;
-  /* transition: 0.5s; */
+  
   position: fixed;
   right: 15px;
   top: 15px;
@@ -208,7 +224,7 @@ a:hover {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(203, 15, 15, 0.9);
   transition: 0.3s;
   z-index: 999;
   margin-top: 0;
@@ -245,7 +261,7 @@ a:hover {
 .navbar-mobile a:focus {
   font-size: 16px;
   position: relative;
-}
+} */
 
 header.sticky{
   padding: 0px 100px 0 540px;
@@ -312,7 +328,7 @@ header.sticky nav ul li a {
 }
 
 .name img{
-  background-color: #0ec56a;
+  background-color: #712cbcac;
   border-style: outset;
   border-radius: 50%;
 }
@@ -393,11 +409,15 @@ header.sticky nav ul li a {
   left: -240px;
   opacity: .9;
   padding-right: 0px;
+  background-color: #15c7d7;
+  border-style: groove;
+  border-radius: 18% ;
+  
   
 }
 
 .myAbout{
-  background-color: rgb(131, 193, 160);
+  background-color: rgba(33, 35, 91, 0.463);
   display: flex;
   justify-content: flex-end;
   flex-direction: row;
@@ -406,6 +426,7 @@ header.sticky nav ul li a {
   left: 440px;
   width: 1100px;
   margin: 40px;
+  padding: 40px;
   height: auto;
   z-index: 230;
   font-size: xx-large;
@@ -447,9 +468,19 @@ header.sticky nav ul li a {
 .my-details-box li i{
   font-size: 16px;
   margin-right: 5px;
-  color: #0ec56a;
+  color: #914fdd96;
   line-height: 6;
   font-size:large;
+}
+
+.my-details-box strong{
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:x-large ;
+}
+
+.my-details-box span{
+  color: whitesmoke;
 }
 
 .about .tech-img{
@@ -458,8 +489,8 @@ header.sticky nav ul li a {
   flex-wrap: wrap;
   align-items: center;
   padding: 20px;
-  background-color: aliceblue;
-  border-color: aqua;
+  background-color: rgb(216, 221, 226);
+  border-color: rgba(124, 30, 231, 0.896);
   border-radius: 10%;
   height: fit-content;
   width: fit-content;
@@ -474,11 +505,13 @@ header.sticky nav ul li a {
 }
 .tech-main-div{
   position: relative;
-  background-color: rgb(8, 12, 83);
+  background-color: rgba(8, 12, 83, 0.542);
   z-index: 230;
   color: aliceblue;
   left: 100px;
   margin: 20px auto 20px auto;
+  padding: 30px;
+  width: 100vw;
 }
 .tech-img>img{
   width: 10vw;
@@ -534,18 +567,65 @@ header.sticky nav ul li a {
 ---------------------------------------------------------------------------- */
 .resume-big{
   display: grid;
-  grid-template-columns: 300px 300px;
+  grid-template-columns: 700px 700px;
   justify-content: space-evenly;
+  background-color: #26244347;
+  /* background-color: #302760; */
 }
 .resume-box{
   background-color: #0ec56a;
-  margin: 10px;
-  padding: 15px;
-  /* width: max-content; */
+  margin: 10px 10px 10px 242px;
+  padding: 25px;
+
   border: 4px solid black;
   border-radius: 3rem;
 
 }
+
+.resume-box h3{
+  color: #c916e4;
+}
+
+.cv{
+  
+  width: max-content;
+  position: relative;
+  padding: 20px;
+  border-radius: 4rem;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: #c916e4;
+}
+
+.cv>a{
+  text-decoration: none;
+  color: white;
+  
+}
+
+
+/* ----------------------------------------------------------------------------
+                              gallery section 
+
+---------------------------------------------------------------------------- */
+
+.Box{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-row: auto;
+  gap: 20px;
+
+}
+
+.Box div{
+  
+}
+
+
+
 
 /* ----------------------------------------------------------------------------
                               My work section 
@@ -557,6 +637,7 @@ header.sticky nav ul li a {
   column-count: auto;
   align-items: stretch;
   column-gap: normal;
+  
 
 }
 
@@ -670,6 +751,7 @@ header.sticky nav ul li a {
   justify-content:space-evenly;
   align-items: center;
   
+  
 }
 
 .contact-me-div{
@@ -684,7 +766,7 @@ header.sticky nav ul li a {
   align-items: stretch;
   width:20vw;
   height: max-content;
-  background-color: #b61c1c;
+  background: rgba(255, 255, 255, 0.08);
   padding: 20px;
 }
 .infomation-box a {
@@ -696,6 +778,7 @@ header.sticky nav ul li a {
   display: flex;
   flex-direction: column;
   width:20vw;
+  margin-left: 310px;
 }
 
 .text-form .firstname{
@@ -703,11 +786,13 @@ header.sticky nav ul li a {
 }
 
 .text-form>div>input{
-  width: -webkit-fill-available;
+  width:600px;
+  padding-left: 20px;
 }
 
 .text-form>div>textarea{
-  width: -webkit-fill-available;
+  width:600px;
+  padding-left: 20px;
 }
 
 .infomation-title{
@@ -793,11 +878,46 @@ footer{
   .nav-link{
     margin-left: 5px;
   }
+
+  .resume-big{
+    row-gap: 20px;
+    margin-left: 60px;
+  }
+
 }
 
 
 
 @media (max-width: 768px) {
+  .container{
+    background-color: #0ec56a;
+  }
+  .hamburger{
+    display: block;
+  }
+
+  .hamburger.active.bar:not(2){
+    opacity: 0;
+  }
+  .hamburger.active.bar:not(1){
+    transform:translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3){
+    transform:translateY(-8px) rotate(-45deg);
+  }
+  .nav-list{
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    gap: 0;
+    flex-direction: column;
+    background-color: #363626;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+
+  }
+
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
@@ -817,7 +937,7 @@ footer{
   }
 
   #navbar{
-    display: none;
+    
   }
 
 }
@@ -837,6 +957,15 @@ footer{
 
   .interests{
     margin-right: 20px;
+  }
+  
+  .resume-big{
+    display: flex;
+    flex-direction:column;
+  }
+  .resume-box{
+    margin-left: 50px;
+    
   }
   
 }
