--- a/css/main.css
+++ b/css/main.css
@@ -818,11 +818,9 @@ footer{
 
 /*  this is  media quary*/
 
-
-
-
- @media (max-width: 1078px) {
-  .interests>div {
+@media screen(max-width: 1078px) {
+  
+  .interests > div {
     display:flex;
     flex-direction: row;
     grid-row: 2;
@@ -890,8 +888,82 @@ footer{
     row-gap: 20px;
     margin-left: 60px;
   }
-
 }
+
+
+
+ @media (max-width: 1079px) {
+
+  .interests > div {
+    display:flex;
+    flex-direction: row;
+    grid-row: 2;
+    padding-left: 0;
+    margin-left: 0;
+  }
+
+  .row>div {
+    display: grid;
+    flex-direction: row;
+    justify-content:flex-start;
+  
+  }
+  .my-details{
+    display: flex;
+    flex-direction:row;
+    background-color: #0ec56a;
+    border-radius: 4rem solid black;
+    
+  }
+  .section-title{
+    padding: 0;
+    margin: 0;
+    position: relative;
+    left: -200px;
+  }
+  .container{
+    margin-left: 0px;
+    padding-left: 0;
+  }
+
+  .myAbout{
+    margin: 8px;
+    left: 350px;
+  }
+
+  #home-section {
+    text-align: center;
+  }
+
+  #home-section h1 {
+    font-size: 32px;
+    line-height: 36px;
+  }
+
+  #home-section p {
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+  #header {
+    border-right: 1px solid #e6e9ec;
+    
+  }
+
+  .navbar ul li{
+    color: rgb(218, 39, 39);
+  }
+
+  .nav-link{
+    margin-left: 5px;
+  }
+
+  .resume-big{
+    row-gap: 20px;
+    margin-left: 60px;
+  }
+}
+
 
 
 
