--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
 }
 
 .header {
-  
+
   display: flex;
   justify-content:space-between;
   position: fixed;
@@ -23,11 +23,11 @@
   padding: 300px 0 0 600px;
   transition: 0.6s;
   z-index: 2000;
-  
+
 }
 body {
   /* background-color: #040404; */
-  color: #fff;
+
   position: relative;
   background: transparent;
   width: 100vw;
@@ -38,7 +38,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: url("../assets/images/black\ background.png") top right no-repeat;
+  background: url("../assets/images/black background.png") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -48,6 +48,7 @@ body::before {
 }
 
 main{
+
 }
 
 section .container {
@@ -71,6 +72,7 @@ section {
   flex-direction: column;
   justify-content: flex-end;
   margin-left: 100px;
+  color: rgba(172, 58, 229, 0.73);
 }
 .section-title h2::after {
   content: "";
@@ -155,6 +157,7 @@ a:hover {
   font-size: 12px;
   line-height: 0;
   margin-left: 5px;
+
 }
 
 .navbar a:before {
@@ -183,90 +186,26 @@ a:hover {
   color: #fff;
 }
 
+.highlight{
+  color: #57e7d8;
+}
+
+
+
 .hamburger{
   display: none;
   cursor: pointer;
   
 }
 
-.bar{
-  display: block;
-  width: 25px;
-  height: 3px;
-  margin: 5px auto;
-  -webkit-transition:  all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  background-color: white;
-}
-
-/**
-* Mobile Navigation 
-*/
-/* .mobile-nav-toggle {
-  color: #fff;
-  font-size: 28px;
-  cursor: pointer;
-  display: none;
-  line-height: 0;
-  
-  position: fixed;
-  right: 15px;
-  top: 15px;
-}
 
 
 
-
-.navbar-mobile {
-  position: fixed;
-  overflow: hidden;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background: rgba(203, 15, 15, 0.9);
-  transition: 0.3s;
-  z-index: 999;
-  margin-top: 0;
-}
-
-.navbar-mobile .mobile-nav-toggle {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-}
-
-.navbar-mobile ul {
-  display: block;
-  position: absolute;
-  top: 55px;
-  right: 15px;
-  bottom: 45px;
-  left: 15px;
-  padding: 10px 0;
-  overflow-y: auto;
-  transition: 0.3s;
-  border: 2px solid rgba(255, 255, 255, 0.2);
-}
-
-.navbar-mobile li {
-  padding: 12px 20px;
-}
-
-.navbar-mobile li+li {
-  margin: 0;
-}
-
-.navbar-mobile a,
-.navbar-mobile a:focus {
-  font-size: 16px;
-  position: relative;
-} */
 
 header.sticky{
   padding: 0px 100px 0 540px;
   background-color: rgb(2, 1, 12);
-  height: 50px;
+  height: 80px;
   
 }
 
@@ -298,7 +237,7 @@ header.sticky nav ul li a {
 .social-links > a {
   padding: 10px;
   background-color: white;
-  border: 2px solid #ca1f1f;
+  border: 2px solid #e636cb;
   border-radius: 50%;
   margin: 20px;
   size: 30px;
@@ -315,6 +254,7 @@ header.sticky nav ul li a {
   font-size: xx-large;
   width: max-content;
   font-family: "Creepster", cursive;
+  color: #0dcaf0;
 }
 
 .name {
@@ -333,12 +273,21 @@ header.sticky nav ul li a {
   border-radius: 50%;
 }
 
-.intro {
+
+.intro>h1{
   position: relative;
   top: -100px;
-  color: #277ef7ee;
+  color: #58e52a;
   left: 30px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: xxx-large;
+}
+
+.intro>h1>span{
+  color: #523e02;
+  /*background-color: white;*/
+  padding: 15px;
+  /*border-radius: 10px;*/
 }
 
 .hireMe{
@@ -347,15 +296,33 @@ header.sticky nav ul li a {
   color: #277ef7ee;
   left: 30px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #302760;
+  background-color: #10041c;
   width: 300px;
   padding: 40px;
   margin-left: 20px;
   border-radius: 2rem;
+
+  animation-name: hire;
+  animation-duration: 5s;
+  /* Animation will be repeated infinitely */
+  animation-iteration-count: infinite;
 }
 .animate__animated{
   animation-duration: 10s;
 }
+
+
+@keyframes hire {
+  from {
+    background-color: #00fff7;
+  }
+
+  to {
+    background-color: white;
+  }
+}
+
+
 
 #home-section p {
   color: #cd10c7;
@@ -436,7 +403,7 @@ header.sticky nav ul li a {
 
 .my-details-box{
   padding: 40px 40px 40px 40px;
-  height: 600px;
+  height: auto;
   border-radius: 2rem;
   border: 4px solid white;
   display: flex;
@@ -444,6 +411,7 @@ header.sticky nav ul li a {
   justify-content: space-evenly;
   margin: 0 20px 0 70px;
   background-color: #302760;
+  width: fit-content;
 
 }
 .my-details{
@@ -455,6 +423,8 @@ header.sticky nav ul li a {
   position: relative;
   top: -200px;
   left: 200px;
+  height: fit-content;
+  width: max-content;
   
 }
 
@@ -617,6 +587,7 @@ header.sticky nav ul li a {
   grid-template-columns: auto auto auto;
   grid-row: auto;
   gap: 20px;
+  
 
 }
 
@@ -646,11 +617,9 @@ header.sticky nav ul li a {
   padding: 10px;
   width: 100px;
 }
-
-
-/*--------------------------------------------------------------
-# Services
---------------------------------------------------------------*/
+              /*--------------------------------------------------------------
+                    # Services
+              --------------------------------------------------------------*/
 
 .assin-big{
   display: grid;
@@ -676,7 +645,7 @@ header.sticky nav ul li a {
   margin: 0 auto;
   width: 100px;
   height: 100px;
-  background: #18d26e;
+  background: rgba(144, 93, 218, 0.73);
   border-radius: 5px;
   transition: all 0.3s ease-out 0s;
   display: flex;
@@ -747,6 +716,11 @@ header.sticky nav ul li a {
   color: #fff;
 }
 
+.view-btn>a{
+  text-decoration: none;
+  color: black;
+}
+
 /* ----------------------------------------------------------------------------
                               contact me section 
 
@@ -763,7 +737,7 @@ header.sticky nav ul li a {
 .contact-me-div{
   display: flex;
   flex-direction: column;
-  width:web-kit-fill-availble;
+  /*width:;*/
 }
 
 .infomation-box{
@@ -776,6 +750,7 @@ header.sticky nav ul li a {
   padding: 20px;
   color: white;
 }
+
 .infomation-box a {
   text-decoration: none;
   color: black;
@@ -806,6 +781,10 @@ header.sticky nav ul li a {
   display: contents;
 }
 
+.btn-sbmt{
+  background-color: #0de01a;
+  padding: 10px;
+}
 /*--------------------------------------------------------
                footer
  -------------------------------------------------------------------- */
@@ -815,11 +794,118 @@ footer{
   background-color: #18d26e;
   height: 10vh;
 }
-
+/* -------------------------------------------------------------------- */
 /*  this is  media quary*/
 
-@media screen(max-width: 1078px) {
+@media screen and (max-width: 375px){
+
+  .name{
+    position: relative;
+    top: 420px;
+    left: -354px;
+    color: black;
+  }
+
+
+  .myAbout{
+    width: 300px;
+  }
+
+  .interests{
+    margin-right: 20px;
+  }
+
+  .resume-big{
+    display: flex;
+    flex-direction:column;
+  }
+  .resume-box{
+    margin-left: 50px;
+
+  }
+  .card4{
+    padding-right: 100px;
+  }
+
+}
+
+@media screen and (max-width:1078px) {
   
+  .interests > div {
+    display:flex;
+    flex-direction: row;
+    grid-row: 2;
+    padding-left: 0px;
+    margin-left: 0px;
+  }
+
+  .row>div {
+    display: grid;
+    flex-direction: row;
+    justify-content:flex-start;
+  
+  }
+  .my-details{
+    display: flex;
+    flex-direction:row;
+    /*background-color: #0ec56a;*/
+    border-radius: 4rem ;
+
+    
+  }
+  .section-title{
+    padding: 0;
+    margin: 0;
+    position: relative;
+    left: -200px;
+  }
+  .container{
+    margin-left: 0px;
+    padding-left: 0;
+  }
+
+  .myAbout{
+    margin: 8px;
+    left: 350px;
+  }
+
+  #home-section {
+    text-align: center;
+  }
+
+  #home-section h1 {
+    font-size: 32px;
+    line-height: 36px;
+  }
+
+  #home-section p {
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+  #header {
+    border-right: 1px solid #e6e9ec;
+    
+  }
+
+  .navbar ul li{
+    color: rgb(218, 39, 39);
+  }
+
+  .navbar{
+    margin-left: 5px;
+  }
+
+  .resume-big{
+    row-gap: 20px;
+    margin-left: 60px;
+  }
+}
+
+ @media (max-width: 1024px) {
+
+
+
   .interests > div {
     display:flex;
     flex-direction: row;
@@ -837,9 +923,9 @@ footer{
   .my-details{
     display: flex;
     flex-direction:row;
-    background-color: #0ec56a;
-    border-radius: 4rem solid black;
-    
+    /*background-color: #0ec56a;*/
+    border-radius: 4rem ;
+
   }
   .section-title{
     padding: 0;
@@ -872,82 +958,13 @@ footer{
     line-height: 24px;
   }
   #header {
-    border-right: 1px solid #e6e9ec;
-    
+
   }
 
-  .navbar ul li{
-    color: rgb(218, 39, 39);
-  }
-
-  .nav-link{
-    margin-left: 5px;
-  }
-
-  .resume-big{
-    row-gap: 20px;
-    margin-left: 60px;
-  }
-}
-
-
-
- @media (max-width: 1079px) {
-
-  .interests > div {
-    display:flex;
-    flex-direction: row;
-    grid-row: 2;
-    padding-left: 0;
-    margin-left: 0;
-  }
-
-  .row>div {
-    display: grid;
-    flex-direction: row;
-    justify-content:flex-start;
-  
-  }
-  .my-details{
-    display: flex;
-    flex-direction:row;
-    background-color: #0ec56a;
-    border-radius: 4rem solid black;
-    
-  }
-  .section-title{
-    padding: 0;
-    margin: 0;
+  .navbar{
     position: relative;
-    left: -200px;
-  }
-  .container{
-    margin-left: 0px;
-    padding-left: 0;
-  }
+    left: -520px;
 
-  .myAbout{
-    margin: 8px;
-    left: 350px;
-  }
-
-  #home-section {
-    text-align: center;
-  }
-
-  #home-section h1 {
-    font-size: 32px;
-    line-height: 36px;
-  }
-
-  #home-section p {
-    margin-top: 10px;
-    font-size: 20px;
-    line-height: 24px;
-  }
-  #header {
-    border-right: 1px solid #e6e9ec;
-    
   }
 
   .navbar ul li{
@@ -955,99 +972,62 @@ footer{
   }
 
   .nav-link{
-    margin-left: 5px;
+    margin-left: 500px;
   }
 
-  .resume-big{
+  .resume-big {
     row-gap: 20px;
     margin-left: 60px;
   }
-}
 
+   .hamburger{
+     display: block;
+   }
 
+   .nav-item{
+     display: none;
 
+   }
 
+   .nav-list{
+     /*visibility: hidden;*/
+     position: fixed;
+     left: 0px;
+     top: 70px;
+     gap: 0;
+     flex-direction: column;
+     background-color: #363626;
+     width: 100%;
+     text-align: center;
+     transition: 0.3s;
+     color: white;
 
+   }
 
-/* @media(min-width: 769px){
-  .interests>div {
-    display:flex;
-    flex-direction: row;
-    grid-row: 2;
-    padding-left: 0;
-    margin-left: 0;
+   .nav-item{
+     margin: 16px 0;
+   }
+
+   .hamburger{
+     left: 10px;
+   }
+
+   .navbar-active{
+     /*visibility: visible;*/
+   }
   }
 
-  .row>div {
-    display: grid;
-    flex-direction: row;
-    justify-content:flex-start;
-  
-  }
-  .my-details{
-    display: flex;
-    background-color: #0ec56a;
-    border-radius: 4rem solid black;
-    height: auto;
-    
-  }
-  .section-title{
-    padding: 0;
-    margin: 0;
-    position: relative;
-    left: -200px;
-  }
-  .container{
-    margin-left: 0px;
-    padding-left: 0;
+
+@media screen and (max-width: 768px) {
+  *{
+    background-color: white;
   }
 
-  .myAbout{
-    margin: 8px;
-    left: 350px;
-  }
-
-  #home-section {
-    text-align: center;
-  }
-
-  #home-section h1 {
-    font-size: 32px;
-    line-height: 36px;
-  }
-
-  #home-section p {
-    margin-top: 10px;
-    font-size: 20px;
-    line-height: 24px;
-  }
-  #header {
-    border-right: 1px solid #e6e9ec;
-  }
-
-  .navbar ul li{
-    color: rgb(218, 39, 39);
-  }
-
-  .nav-link{
-    margin-left: 5px;
-  }
-
-  .resume-big{
-    row-gap: 20px;
-    margin-left: 60px;
-  }
-} */
-
-
-
-@media (max-width: 768px) {
-  
   .hamburger{
     display: block;
   }
 
- 
+
 
   .hamburger.active.bar:nth-child(2){
     opacity: 0;
@@ -1061,7 +1041,7 @@ footer{
   .nav-list{
     display: none;
     position: fixed;
-    left: -1000%;
+    left: 0px;
     top: 70px;
     gap: 0;
     flex-direction: column;
@@ -1081,12 +1061,10 @@ footer{
   }
 
   [data-aos-delay] {
-    transition-delay: 0 !important;
+    transition-delay: 0s !important;
   }
 
-  .mobile-nav-toggle {
-    display: block;
-  }
+
 
   .navbar ul li {
     margin-block-start: 1em;
@@ -1096,124 +1074,24 @@ footer{
     padding-inline-start: 40px;
   }
 
-  
+  .Box{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row: auto;
+    gap: 10px;
+  }
 
 }
 
-/* @media (min-width: 391px) {
-  
-  .hamburger{
-    display: block;
-  }
-
-  .hamburger.active.bar:not(2){
-    opacity: 0;
-  }
-  .hamburger.active.bar:not(1){
-    transform:translateY(8px) rotate(45deg);
-  }
-  .hamburger.active .bar:nth-child(3){
-    transform:translateY(-8px) rotate(-45deg);
-  }
-   .nav-list{
-    display: none;
-    position: fixed;
-    left: -100%;
-    top: 70px;
-    gap: 0;
-    flex-direction: column;
-    background-color: #363626;
-    width: 100%;
-    text-align: center;
-    transition: 0.3s;
-
-  } 
-
-  [data-aos-delay] {
-    transition-delay: 0 !important;
-  }
-
-  .mobile-nav-toggle {
-    display: block;
-  }
-
-  .navbar ul li {
-    background-color: #35e888;
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-  }
-
-  
-
-} */
-
-@media (max-width:390px){
-  .name{
-    position: relative;
-    top: 420px;
-    left: -354px;
-    color: whites
-  }
 
 
-  .myAbout{
-    width: 300px;
-  }
-
-  .interests{
-    margin-right: 20px;
-  }
-  
-  .resume-big{
-    display: flex;
-    flex-direction:column;
-  }
-  .resume-box{
-    margin-left: 50px;
-    
-  }
-  
-}
-
-/* @media (min-width:308px){
-  .name{
-    position: relative;
-    top: 420px;
-    left: -354px;
-    color: whites
-  }
-
-
-  .myAbout{
-    width: 300px;
-  }
-
-  .interests{
-    margin-right: 20px;
-  }
-  
-  .resume-big{
-    display: flex;
-    flex-direction:column;
-  }
-  .resume-box{
-    margin-left: 50px;
-    
-  }
-  
-} */
-
-@media(max-width:307px) {
+@media(max-width:320px) {
   .row>div {
     display: grid;
     flex-direction: row;
     justify-content:flex-start;
-    background-color:#f828f1 ;
-  } 
+    background-color:#f828f1;
+  }
 
   .myAbout{
     width: 900px;
@@ -1225,10 +1103,20 @@ footer{
     position: relative;
     left: 100px;
     top: 100px;
-  
+    background-color: #0563bb;
+
   }
 
   .my-details-box{
     margin-left: 0;
+  }
+
+  .Box{
+    display: grid;
+    grid-template-rows: auto auto;
+  }
+
+  .Box div img{
+    width: 100px;
   }
 }
