--- a/css/main.css
+++ b/css/main.css
@@ -202,14 +202,14 @@ a:hover {
 
 
 
-header.sticky{
+.header.sticky{
   padding: 0px 100px 0 540px;
   background-color: rgb(2, 1, 12);
   height: 80px;
   
 }
 
-header.sticky nav ul li a {
+.header.sticky nav ul li a {
   color: rgb(140, 14, 236);
 }
 
@@ -540,13 +540,13 @@ header.sticky nav ul li a {
   grid-template-columns: 700px 700px;
   justify-content: space-evenly;
   background-color: #26244347;
+  left: 80px;
   /* background-color: #302760; */
 }
 .resume-box{
   background-color: #0ec56a;
   margin: 10px 10px 10px 242px;
   padding: 25px;
-
   border: 4px solid black;
   border-radius: 3rem;
 
