--- a/css/main.css
+++ b/css/main.css
@@ -1025,7 +1025,7 @@ section .container {
   padding: 12px 15px;
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .php-email-form button {
   background: #18d26e;
   border: 0;
   padding: 10px 30px;
@@ -1034,7 +1034,7 @@ section .container {
   border-radius: 4px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .php-email-form button:hover {
   background: #15bb62;
 }
 
