--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #040404;
+  /*background-color: #040404;*/
   color: #fff;
   position: relative;
   background: transparent;
@@ -20,11 +20,11 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../assets/images/bg.jpg") top right no-repeat;
-  background-size: cover;
+  background: #040404 url("../assets/images/dilusha-1.jpg") top right no-repeat;
+  background-size:cover;
   left: 0;
   right: 0;
-  top: 0;
+  top: 0px;
   height: 100vh;
   z-index: -1;
 }
@@ -440,7 +440,7 @@ section .container {
 
 /*=========== tech div =============*/
 .tech-main-div>div>h1{
-  color: rgb(173, 9, 171);
+  color: #18d26e;
   font-weight: bolder;
   font-size: 5rem;
 }
@@ -455,14 +455,20 @@ section .container {
 /*  width: 100vw;*/
 /*}*/
 .tech-img>img{
-  width: 10vw;
-  height: 10vw;
+  width: 7vw;
+  height: 8vw;
+  margin-bottom: 30px;
+  background-color: #D9D9D9;
+  padding: 15px;
+  border-radius: 10px;
 }
 
 .tech-div{
-  display: grid;
-  gap: 20px;
-  grid-template-columns: auto auto auto auto;
+  /*display: flex;*/
+  /*flex-direction: row;*/
+  column-count: 6;
+  gap: 10px;
+  /*grid-template-columns: auto auto auto auto;*/
   justify-content: center;
 }
 
@@ -644,12 +650,98 @@ section .container {
 ---------------------------------------------------------------------------- */
 
 .Box{
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-row: auto;
-  gap: 20px;
+  /*display: grid;*/
+  /*grid-template-columns: auto auto auto;*/
+  /*grid-row: auto;*/
+  gap: 10px;
 
 
+}
+
+/*--------------------------------------------------------------
+# Testimonials
+--------------------------------------------------------------*/
+.testimonials .testimonials-carousel,
+.testimonials .testimonials-slider {
+  overflow: hidden;
+}
+
+.testimonials .testimonial-item {
+  box-sizing: content-box;
+  min-height: 320px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.testimonials .testimonial-item .testimonial-img {
+  width: 90px;
+  border-radius: 50%;
+  margin: -40px 0 0 40px;
+  position: relative;
+  z-index: 2;
+  border: 6px solid rgba(255, 255, 255, 0.12);
+}
+
+.testimonials .testimonial-item h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0 5px 45px;
+  color: #fff;
+}
+
+.testimonials .testimonial-item h4 {
+  font-size: 14px;
+  color: #999;
+  margin: 0 0 0 45px;
+}
+
+.testimonials .testimonial-item .quote-icon-left,
+.testimonials .testimonial-item .quote-icon-right {
+  color: rgba(255, 255, 255, 0.25);
+  font-size: 26px;
+}
+
+.testimonials .testimonial-item .quote-icon-left {
+  display: inline-block;
+  left: -5px;
+  position: relative;
+}
+
+.testimonials .testimonial-item .quote-icon-right {
+  display: inline-block;
+  right: -5px;
+  position: relative;
+  top: 10px;
+}
+
+/*.testimonials .testimonial-item p {*/
+/*  font-style: italic;*/
+/*  margin: 0 15px 0 15px;*/
+/*  padding: 20px 20px 60px 20px;*/
+/*  background: rgba(255, 255, 255, 0.1);*/
+/*  position: relative;*/
+/*  border-radius: 6px;*/
+/*  position: relative;*/
+/*  z-index: 1;*/
+/*}*/
+
+.testimonials .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  opacity: 1;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #18d26e;
 }
 
 
